--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,8 @@
 }
 
 .image {
-	height: 40%;
-	width: 40%;
+	height: 25em;
+	width: 28em;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
