--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,23 @@
-.datePicker, .currDate{
+.app,
+html {
+	background-color: #333333;
+}
+
+.datePicker,
+.currDate {
 	text-align: center;
+	color: white;
 }
 
 .image {
-	height: 25em;
-	width: 28em;
+	height: 30em;
+	width: 35em;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 5%;
 }
 
-.button{
-	margin-left: 10px;
+.button {
+	margin-left: 1em;
 }
-
